Use ImmutableSet#of instead of Set#of
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/symex-smg-refactoring@45576 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c